compiler/parser/parser.y
%{
    #include <stdio.h>
    #include <stdlib.h>
    #include <string.h>
    #include "analysis_state.h"
    #include "symbol_table.h"
    #include "utils.h"
    #include "syntax_tree.h"

    #define TYPE_INT 1
    #define TYPE_VOID 2
    #define TYPE_ARRAY 3

    extern int yylineno;
    extern char *yytext;
    
    extern char *currentScope;
    extern SymbolTable symtab;
    extern AstNode *syntax_tree;

    int yylex(void);
    void yyerror(const char *msg);

//   yydebug = 1;
//   %debug
%}

%union {
    char *sval;
    int   ival;
    struct AstNode *ast;
}

%token <sval> ID
%token <ival> NUM
%token LEX_ERROR

%type <ast> program declaration_list declaration
%type <ast> var_declaration fun_declaration 
%type <ast> params param_list param
%type <ast> statement selection_stmt iteration_stmt return_stmt
%type <ast> expression_stmt expression simple_expression var call args arg_list
%type <ast> compound_stmt additive_expression
%type <sval> block_scope
%type <ival> type_specifier
%type <ast> relop addop mulop
%type <ast> local_declarations statement_list
%type <ast> factor term

%nonassoc LOWER_THAN_ELSE
%nonassoc ELSE

/* Tokens */
%token IF 1 
%token WHILE 2 
%token RETURN 3
%token INT 4 
%token VOID 5 
%token EQ 8
%token NEQ 9 
%token LT 10
%token LTE 11
%token GT 12
%token GTE 13
%token PLUS 14 
%token MINUS 15 
%token TIMES 16
%token DIV 17
%token ASSIGN 18 
%token SEMICOLON 19
%token COMMA 20
%token LPAREN 21
%token RPAREN 22
%token LBRACE 23
%token RBRACE 24
%token LBRACK 25
%token RBRACK 26
%token MOD 28


%%

program:
    declaration_list {
        syntax_tree = newNode(AST_PROGRAM);
        syntax_tree->lineno = $1 ? $1->lineno : 0;
        for (AstNode *n = $1; n; ) {
            AstNode *next = n->nextSibling; // save next node
            n->nextSibling = NULL; // detach current node from the list
            addChild(syntax_tree, n); // add current node to the syntax tree
            n = next; // move to the next node
        }
    }
    ;

declaration_list
    : declaration_list declaration
    {
        AstNode *n = $1;
        while (n->nextSibling) n = n->nextSibling; // traverse to the end of the list
        n->nextSibling = $2; // append the new declaration
        $$ = $1;
        printf("[PARSER DBG] declaration_list: added %s\n", $2->name);
    }
    | declaration { $$ = $1; }
    ;

declaration
    : var_declaration { $$ = $1; }
    | fun_declaration { $$ = $1; }
    ;


var_declaration:
    type_specifier ID SEMICOLON
    {
        declareSymbol(
            &symtab, 
            $2, 
            currentScope, 
            SYMBOL_VAR, 
            yylineno, 
            $1,
            0
        );
        AstNode *n = newNode(AST_VAR_DECL);
        n->name = strdup($2);
        n->array_size = 0;
        n->data_type = $1;
        n->lineno = yylineno; // Set the line number manually
        $$ = n;
        printf(
            "[PARSER DBG] var_declaration: name=%s",
            $2
        );
        free($2);
    }
    | type_specifier ID LBRACK NUM RBRACK SEMICOLON  /* <-- Adicione esta regra */
    {
        // Ação para declarar um vetor
        declareSymbol(
            &symtab,
            $2,
            currentScope,
            SYMBOL_VAR,
            yylineno,
            $1,
            $4
        );
        AstNode *n = newNode(AST_VAR_DECL);
        n->name = strdup($2);
        n->array_size = $4;
        n->data_type = $1;
        n->lineno = yylineno;
        $$ = n;
        printf(
            "[PARSER DBG] var_declaration (vector): name=%s, size=%d",
            $2, 
            $4
        );
        free($2);
    } ;

type_specifier:
    INT  { $$ = TYPE_INT;  }
    | VOID { $$ = TYPE_VOID; }
    ;

fun_declaration:
    type_specifier ID LPAREN  {
        declareSymbol(
            &symtab,
            $2,              // function name
            currentScope,
            SYMBOL_FUNC,
            yylineno,
            $1,               // return type
            0
        );
        pushScope($2); // enter function scope
    } params RPAREN compound_stmt {
        Symbol *funcSym = getSymbol(
            &symtab, 
            $2, 
            "global"
        );
        AstNode *n = newNode(AST_FUN_DECL);
        n->name = strdup($2); // function name
        n->data_type = $1;
        n->lineno = funcSym ? funcSym->declLines->line : yylineno; // Set the line number manually
        if ($5) addChild(n, $5); // parameters
        if ($7) addChild(n, $7); // compound statement
        $$ = n;

        int pcount = 0;
        if ($5) {
            for (AstNode *c = $5->firstChild; c; c = c->nextSibling) {
                ++pcount;
            }
        }

        int *types = NULL;
        if (pcount > 0) {
            types = malloc(pcount * sizeof(*types));
            int i = 0;
            for (AstNode *c = $5->firstChild; c; c = c->nextSibling, ++i) {
                types[i] = (c->array_size != 0) ? TYPE_ARRAY : c->data_type;
            }
        }

        setFunctionParams(
            &symtab,
            $2,
            "global",
            pcount,
            types
        );

        free(types);
        popScope();
        printf(
            "[PARSER DBG] fun_declaration: name=%s, params=%p, body=%p\n",
            $2, 
            (void*)$5, 
            (void*)$7
        );
        free($2);
    }
;

params
    : param_list { $$ = $1; }
    | VOID { $$ = NULL; }
    ;

param_list
    : param_list COMMA param {
        addChild($1, $3); // add parameter to the list
        $$ = $1; // return the updated list
    }
    | param {
        AstNode *n = newNode(AST_PARAM_LIST);
        n->lineno = $1 ? $1->lineno : yylineno;
        addChild(n, $1); // single parameter
        $$ = n; // return the parameter list
    }
    ;

param:
    type_specifier ID {
        declareSymbol(
            &symtab,
            $2,
            currentScope,
            SYMBOL_VAR,
            yylineno,
            $1,
            0
        );
        $$ = newNode(AST_PARAM);
        $$->name = strdup($2); // parameter name
        $$->data_type = $1;
        $$->lineno = yylineno; // Set the line number manually
        free($2);
    }
    | type_specifier ID LBRACK RBRACK {
        declareSymbol(
            &symtab,
            $2,
            currentScope,
            SYMBOL_VAR,
            yylineno,
            $1,
            -1
        );
        $$ = newNode(AST_PARAM_ARRAY);
        $$->name = strdup($2); // parameter name
        $$->data_type = $1;
        $$->lineno = yylineno; // Set the line number manually
        $$->array_size = -1;
        free($2);
    }
;

compound_stmt: 
    LBRACE block_scope local_declarations statement_list RBRACE {
        AstNode *n = newNode(AST_BLOCK);
        n->lineno = yylineno; // Set the line number manually
        n->name = $2;
        if ($3) addChild(n, $3); // local declarations
        if ($4) {
            AstNode *stmts = $4;
            while (stmts) {
                AstNode *next = stmts->nextSibling; // save next node
                stmts->nextSibling = NULL; // detach current statement
                addChild(n, stmts); // add current statement to the block
                stmts = next; // move to the next statement
            }
        }
        $$ = n;
        popScope();
        printf(
            "[PARSER DBG] compound_stmt: scope=%s decls=%p stmts=%p\n",
            n->name,
            (void*)$3,
            (void*)$4
        );
    }
    ;

block_scope:
    /* empty */ {
        pushBlockScope();
        $$ = strdup(currentScope);
    }
    ;

local_declarations: 
    /* empty */ { $$ = NULL; }
    | var_declaration local_declarations {
        AstNode *cur = $1;
        while (cur->nextSibling) cur = cur->nextSibling;
        cur->nextSibling = $2;
        $$ = $1;
    }
    ;

statement_list:
    /* empty */ { $$ = NULL; }
    | statement statement_list {
        if (!$1) {
            $$ = $2;
        } else {
            AstNode *n = $1;
            while (n->nextSibling) n = n->nextSibling;
            n->nextSibling = $2;
            $$ = $1;
        }
    }
    ;

statement
    : expression_stmt { $$ = $1; }
    | compound_stmt { $$ = $1; }
    | selection_stmt { $$ = $1; }
    | iteration_stmt { $$ = $1; }
    | return_stmt { $$ = $1; }
    ;

expression_stmt
    : expression SEMICOLON { $$ = $1; }
    | SEMICOLON {
        /* Preserve empty statements so control-flow bodies keep a valid AST shape. */
        AstNode *n = newNode(AST_BLOCK);
        n->lineno = yylineno;
        $$ = n;
    }
    ;

selection_stmt
    : IF LPAREN expression RPAREN statement %prec LOWER_THAN_ELSE {
        AstNode *n = newNode(AST_IF);
        n->lineno = $3 ? $3->lineno : yylineno;
        addChild(n, $3); // condition
        addChild(n, $5); // then statement
        $$ = n;
    }
    | IF LPAREN expression RPAREN statement ELSE statement {
        AstNode *n = newNode(AST_IF);
        n->lineno = $3 ? $3->lineno : yylineno;
        addChild(n, $3); // condition
        addChild(n, $5); // then statement
        addChild(n, $7); // else statement
        $$ = n;
    }
    ;

iteration_stmt
    : WHILE LPAREN expression RPAREN statement {
        AstNode *n = newNode(AST_WHILE);
        n->lineno = $3 ? $3->lineno : yylineno;
        addChild(n, $3); // condition
        addChild(n, $5); // body statement
        $$ = n;
    }
    ;

return_stmt
    : RETURN SEMICOLON { 
        AstNode *n = newNode(AST_RETURN);
        n->lineno = yylineno; // Set the line number manually
        $$ = n; // return without expression
    }
    | RETURN expression SEMICOLON {
        AstNode *n = newNode(AST_RETURN);
        n->lineno = yylineno; // Set the line number manually
        if ($2) 
            addChild(n, $2); // return expression
        $$ = n;
    }
    ;

expression
    : var ASSIGN expression {
        AstNode *n = newNode(AST_ASSIGN);
        n->lineno = yylineno; // Set the line number manually
        addChild(n, $1); // variable
        addChild(n, $3); // expression
        $$ = n;
        printf(
            "[PARSER DBG] assignment: var=%p expr=%p\n",
            (void*)$1,
            (void*)$3
        );
    }
    | simple_expression { $$ = $1; }
;

var
    : ID {
        $$ = newIdNode($1, yylineno);
        free($1);
    }
    | ID LBRACK expression RBRACK {
        AstNode *n = newNode(AST_ARRAY_ACCESS);
        n->name = strdup($1);    // Guarda o nome do vetor (ex: "a")
        n->lineno = yylineno;
        addChild(n, $3);         // Adiciona a expressão do índice (ex: "k") como filho do nó.
        $$ = n;
        free($1);
    }
    ;

simple_expression:
    additive_expression relop additive_expression {
        AstNode *n = newNode(AST_BINOP);
        n->lineno = $2 ? $2->lineno : yylineno;
        addChild(n, $1); // left operand
        addChild(n, $2); // operator
        addChild(n, $3); // right operand
        $$ = n;
        printf(
            "[PARSER DBG] binop: left=%p op=%p right=%p\n",
            (void*)$1, 
            (void*)$2, 
            (void*)$3
        );
    }
    | additive_expression {
        $$ = $1;
    }
    ;

relop
    : LTE { $$ = newOpNode("<=", yylineno); }
    | LT { $$ = newOpNode("<", yylineno); }
    | GT { $$ = newOpNode(">", yylineno); }
    | GTE { $$ = newOpNode(">=", yylineno); }
    | EQ { $$ = newOpNode("==", yylineno); }
    | NEQ { $$ = newOpNode("!=", yylineno); }
    ;

additive_expression
    : additive_expression addop term {
        AstNode *n = newNode(AST_BINOP);
        n->lineno = $2 ? $2->lineno : yylineno;
        addChild(n, $1); // left operand
        addChild(n, $2); // operator
        addChild(n, $3); // right operand
        $$ = n;
    }
    | term { $$ = $1; }
    ;

addop
    : PLUS { $$ = newOpNode("+", yylineno); }
    | MINUS { $$ = newOpNode("-", yylineno); }
    ;

term
    : term mulop factor {
        AstNode *n = newNode(AST_BINOP);
        n->lineno = $2 ? $2->lineno : yylineno;
        addChild(n, $1); // left operand
        addChild(n, $2); // operator
        addChild(n, $3); // right operand
        $$ = n;
    }
    | factor { $$ = $1; }
    ;

mulop
    : TIMES { $$ = newOpNode("*", yylineno); }
    | DIV { $$ = newOpNode("/", yylineno); }
    | MOD { $$ = newOpNode("%", yylineno); }
    ;

factor
    : LPAREN expression RPAREN {
        $$ = $2; // return the expression inside parentheses
    }
    | var { $$ = $1; } // variable
    | call { $$ = $1; } // function call
    | NUM { $$ = newNumNode($1, yylineno); } // create a new AST node for the number
    ;

call:
    ID LPAREN args RPAREN {
        AstNode *n = newNode(AST_CALL);
        n->name = strdup($1); // function name
        n->lineno = yylineno; // Set the line number manually
        addChild(n, $3); // arguments
        $$ = n;
        free($1);
    }
;

args
    : arg_list { $$ = $1; }
    | /* empty */ { $$ = NULL;}
    ;

arg_list
    : arg_list COMMA expression {
        addChild($1, $3); // add expression to argument list
        $$ = $1; // return the updated list
    }
    | expression {
        AstNode *n = newNode(AST_ARG_LIST);
        n->lineno = yylineno; // Set the line number manually
        addChild(n, $1); // single argument
        $$ = n; // return the argument list
    }
    ;

%%

void yyerror(const char *msg) {
    if (consumePendingLexicalError()) {
        return;
    }

    fprintf(stderr, "Line %d: %s\n", yylineno, msg);
    recordSyntaxError();
}
